fix flicker

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -26,13 +26,6 @@
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply font-sans antialiased bg-background text-foreground;
-  }
-
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
@@ -81,5 +74,11 @@
   }
 }
 
-/* @layer base { */
-/* } */
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply font-sans antialiased bg-background text-foreground;
+  }
+}
